[gd_scene load_steps=4 format=2]

[ext_resource path="res://Rooms/document/stolik urzÄ…d.png" type="Texture" id=1]
[ext_resource path="res://Rooms/document/stolik.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 75.094

[node name="StaticBody2D" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 1.78381, -20.5138 )
polygon = PoolVector2Array( -36.4779, 33.2768, -15.6668, 43.9796, 31.6042, 22.2766, 7.52275, 10.6818 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -6.55498, -12.9859 )
scale = Vector2( 0.124895, 0.124895 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 1.78381, -19.3246 )
polygon = PoolVector2Array( -36.7752, 6.22231, -36.7752, 34.1687, -14.7749, 44.2769, 31.3069, 21.9793, 30.7123, -6.26436, 9.00926, -16.6699 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
visible = false
position = Vector2( 0.297287, -12.784 )
shape = SubResource( 1 )
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D2_body_exited"]
